# PokeMaker

./: .gitignore  CMakeLists.txt  Doxyfile  PokeMaker.sln  main.cpp
.github/workflows/: static.yml
Debug/: imgui.ini
Game/: Game.vcxproj
PokeMaker/: App.cpp  App.hpp  Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  EditorState.cpp  EditorState.hpp  EditorUI.cpp  EditorUI.hpp  Entity.cpp  Entity.hpp  EntityEditor.cpp  EntityEditor.hpp  JsonUtils.cpp  JsonUtils.hpp  Layer.cpp  Layer.hpp  LinkMap.cpp  LinkMap.hpp  Map.cpp  Map.h  Map.hpp  MapEditor.cpp  MapEditor.hpp  Player.hpp  PokeMaker.vcxproj  PokeMaker.vcxproj.filters  Project.cpp  Project.hpp  ProjectManager.cpp  ProjectManager.hpp  Resource.aps  RessourceManager.cpp  RessourceManager.hpp  SceneManager.cpp  SceneManager.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  (+11 more)
assets/: test.json
include/ImGui/: imgui-SFML.cpp
include/SFML/Graphics/: Color.inl
include/nlohmann/: json.hpp
include/nlohmann/detail/input/: lexer.hpp
src/core/: CMakeLists.txt
src/core/include/: Core.hpp  FileUtils.hpp  IDGenerator.hpp  Logger.hpp  MathUtils.hpp  ResourceManager.hpp  Serialization.hpp  Timer.hpp  Types.hpp
src/core/include/Core/: Application.hpp  Convert.hpp  FileSystem.hpp  InputManager.hpp  Layer.hpp  Logger.hpp  Project.hpp  ResourceManager.hpp  Tile.hpp  TileMap.hpp  TileSet.hpp
src/core/src/: Application.cpp  Convert.cpp  FileSystem.cpp  FileUtils.cpp  InputManager.cpp  Layer.cpp  Logger.cpp  Project.cpp  ResourceManager.cpp  Tile.cpp  TileMap.cpp  TileSet.cpp  Timer.cpp
src/editor/: CMakeLists.txt
src/editor/include/Editor/: AutoTile.hpp  EditorApp.hpp  EditorApplication.hpp  EditorTool.hpp  EditorUI.hpp  LayerManager.hpp  Map.hpp  MapLink.hpp  NPCEditor.hpp  Project.hpp  ProjectManager.hpp  Tile.hpp  TileLayer.hpp  TilePalette.hpp  WFCGenerator.hpp
src/editor/include/Editor/Map/: AnimatedTile.hpp  AutoTile.hpp  Layer.hpp  Map.hpp  Tile.hpp  TileMap.hpp
src/editor/include/Editor/Project/: Project.hpp  ProjectManager.hpp  ProjectSerializer.hpp
src/editor/include/Editor/Tools/: BrushTool.hpp  FillTool.hpp  SelectionTool.hpp
src/editor/src/: AutoTile.cpp  EditorApp.cpp  EditorApplication.cpp  EditorUI.cpp  LayerManager.cpp  Map.cpp  MapLink.cpp  NPCEditor.cpp  Project.cpp  ProjectManager.cpp  TileLayer.cpp  TilePalette.cpp  WFCGenerator.cpp  main.cpp
src/editor/src/Map/: AnimatedTile.cpp  AutoTile.cpp  Layer.cpp  Map.cpp  TileMap.cpp
src/editor/src/Project/: ProjectManager.cpp  ProjectSerializer.cpp
src/engine/: CMakeLists.txt
src/engine/include/: AutotileWFC.hpp  Engine.hpp  Layer.hpp  Tile.hpp  TileMap.hpp  Tileset.hpp
src/engine/include/Engine/: System.hpp  World.hpp
src/engine/include/Engine/Components/: AnimationComponent.hpp  BehaviorComponent.hpp  CollisionComponent.hpp  NPCComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
src/engine/include/Engine/Systems/: AnimationSystem.hpp  BehaviorSystem.hpp  PhysicsSystem.hpp
src/engine/src/: AutotileWFC.cpp  Layer.cpp  Systems.cpp  Tilemap.cpp  Tileset.cpp  World.cpp
src/engine/src/Systems/: AnimationSystem.cpp  BehaviorSystem.cpp  PhysicsSystem.cpp
src/game/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/renderer/include/Renderer/: Camera.hpp  Camera2D.hpp  GridRenderer.hpp  MapRenderer.hpp  RenderWindow.hpp  Renderer.hpp  TileAtlas.hpp  TileRenderer.hpp
src/renderer/src/: Camera.cpp  Camera2D.cpp  GridRenderer.cpp  MapRenderer.cpp  RenderWindow.cpp  Renderer.cpp  TileAtlas.cpp  TileRenderer.cpp
tests/: CMakeLists.txt
